Fixed search overlap

--- a/UBC Forums/webapp/styles/post.css
+++ b/UBC Forums/webapp/styles/post.css
@@ -29,7 +29,7 @@
     border-radius: var(--DefaultBR);
     background-color: #FFF;
 }
-#postbutton,#community,#uploadImg{
+#postbutton,#communitySelect,#uploadImg{
     text-decoration: none;
     color: #FFF;
     border-radius: var(--DefaultBR);
