--- a/UBC Forums/webapp/styles/postFrag.css
+++ b/UBC Forums/webapp/styles/postFrag.css
@@ -119,6 +119,9 @@
     cursor: pointer;
     box-shadow: 1px 1px 0 0 rgba(0, 0, 0, 1)
 }
+.promo-active{
+    background-color: var(--Coral);
+}
 .promo:hover{
     background-color: var(--OffWhite);
 }
